# datasette-sierra-suggest-purchase

./: .containerignore  .gitignore  CLAUDE.md  README.md  compose.yaml  datasette-container.yaml  datasette.yaml  pyproject.toml
.github/workflows/: ci.yml
containers/datasette/: Containerfile
containers/fake-sierra/: Containerfile
docs/: EXECUTIVE_SUMMARY.md  screenshots.yml
docs/screenshots/: README.md
llore/: 01_suggest-a-purchase-design-doc-datasette-v1.md  02_suggest-a-purchase-design-doc-datasette-v2-simplified.md  03_suggest-a-purchase-architectural-review-2day-poc.md  04_suggest-a-bot-design.md  05_architecture-assessment.md  06_datasette-sierra-suggest-purchase_TASKS.md  10_SECURITY_REMEDIATION_PLAN.md  suggest_a_purchase_bootstrap_and_path.md
scripts/: capture_screenshots.sh  container-dev.sh  dev.sh  fake_sierra.py  init_db.py  purge_old_requests.py
src/datasette_suggest_purchase/: __init__.py  plugin.py  staff_auth.py
src/suggest_a_bot/: __init__.py  __main__.py  catalog.py  config.py  evidence.py  identifiers.py  models.py  openlibrary.py  pipeline.py  run.py
tests/: __init__.py  conftest.py
tests/integration/: test_csrf.py  test_csv_safety.py  test_openlibrary_gate.py  test_patron_flow.py  test_permissions.py  test_rate_limit.py  test_staff_flow.py  test_staff_login.py
tests/unit/: test_bot_config.py  test_bot_models.py  test_bot_schema.py  test_catalog_lookup.py  test_config_loading.py  test_evidence.py  test_evidence_stage.py  test_identifiers.py  test_openlibrary.py  test_openlibrary_stage.py  test_pii_scrubber.py  test_schema.py  (+3 more)
(+14 files in other folders)
