[project]
name = "datasette-suggest-purchase"
version = "0.1.0"
description = "Datasette plugin for patron purchase suggestions with Sierra ILS integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasette>=1.0a14",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1",
    "pytest-cov>=6.0",
]

[project.entry-points.datasette]
suggest-purchase = "datasette_suggest_purchase"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datasette_suggest_purchase"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
